tests/syntax_error/import_missing_quotes.jou
from stdlib/io.jou import printf  # Error: expected a string to specify the file name, got a variable name 'stdlib'
